--- a/main.tex
+++ b/main.tex
@@ -35,6 +35,22 @@
 \paragraph{Relationships and Data Structure}
 
 \section*{Entities}
+\subsubsection{Design}
+The system is organized by Reservations. 
+\begin{itemize}
+\item Reservation has a unique identifier, description name, room identifier, person who requested the reservation and the date and time for request. The creation date and creation time of the reservation is tracked. \item A reservation can be associated with any room for a specific time period.
+\item A room is associated with only one active reservation for a finite time period.
+\item The database will store each User's user name, password, email, city and state.
+\item A user is identified by a unique identifier and user email.
+\item A User can be of type of Admin or Normal exclusively.
+\item User of type Admin can manage entire system, can access all data and run reports.
+\item User of type Normal does not have any privileges of user type Admin.
+\item User types of Admin and Normal can register as users, book a reservation, modify a reservation, cancel a reservation and view status of reservations.
+\item User of type Normal can send messages to user of type Admin.
+\end{itemize}
+
+
+
 \section*{Attributes}
 \section*{Relationships}
 \section*{Data Queries}
