Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -68,6 +68,17 @@ The system is organized by Reservations.
 \item User of type Normal can rate service and quality of a reservation.
 \end{itemize}
 
+Based on the system design requirements, the following entity types are in the Reservation database:
+\begin{itemize}
+    \item Reservation
+    \item Reservation Service Rating
+    \item Person
+    \item User
+    \item User Category
+    \item Room
+    \item Room Category
+    \item Room Status
+\end{itemize}
 
 
 \section*{Attributes}
