--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt]{report}
 \usepackage[margin=1in,footskip=0.25in]{geometry}
 \usepackage{sectsty}
-
+\usepackage{parcolumns}
 \usepackage[normalem]{ulem}
 %%\usepackage{showframe} % For illustration
 
@@ -26,6 +26,7 @@
 \date{September 2018}
 
 \begin{document}
+\raggedright
 
 %%\maketitle
 
@@ -70,18 +71,14 @@ The system is organized by Reservations.
 
 Based on the system design requirements, the following entity types are in the Reservation database:
 \begin{itemize}
-    \item Reservation
-    \item Reservation Service Rating
-    \item Person
-    \item User
-    \item User Category
-    \item Room
-    \item Room Category
-    \item Room Status
+    \item Reservation,  Reservation Service Rating
+    \item Room, Room Category, Room Status
+    \item Person, User, User Category
 \end{itemize}
 
 
-\section*{Attributes}
+
+
 \section*{Data Queries}
 \paragraph{Application Implementation Architecture}
 %%\subsection*{Google Cloud Architecture Application}
