Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -75,11 +75,36 @@ Based on the system design requirements, the following entity types are in the R
     \item Room, Room Category, Room Status
     \item Person, User, User Category
 \end{itemize}
+%%end of entities design
 
+\section*{Data Queries (in English)}
+\subsection*{Reservation Information}
+\begin{enumerate}
+\item How many Active Reservations are there in the system today?
+\item How many Cancelled Reservations are there in the system today?
+\item What time of day are there the most Booked Reservations?
+\item What time of day are there the least Booked Reservations?
+\item What User cancels the most Reservations?
+\item What user modifies the most Reservations?
+\end{enumerate}
 
+\subsection*{Room Information}
+\begin{enumerate}
+\item What Room is the most requested?
+\item What Room is the least requested?
+\item What are the Rooms requested by User?
+\item What type of Rooms are available for holding more than 5 people?
+\end{enumerate}
 
+\subsection*{Miscellaneous}
+\begin{enumerate}
+\item What are my open Reservation Requests?
+\item How many times have I scheduled the 2nd Floor Conference Room?
+\item What conference rooms are available at 1pm on September 6?
+\item How many tables are in the 3rd Floor Study Room?
+\item What Rooms, dates and times are available that have SmartBoards next month?
+\end{enumerate}
 
-\section*{Data Queries}
 \paragraph{Application Implementation Architecture}
 %%\subsection*{Google Cloud Architecture Application}
 
