Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -44,10 +44,13 @@
 \end{titlepage}
 
 \section*{Abstract}
-blah, blah, blah
+
 
 %%end of abstract text
 \section*{Problem Statement}
+The UB Room Reservation System aims to enable users to easily perform functions related to reserving a room as well as provide useful insights to the administrators, into the reservation process.  Reservations are for facilities located on the University of Bridgeport’s campus which are comprised of Meeting Rooms, Study Rooms, Study Halls and Conference Rooms.  Students, campus departments, and off-campus groups sponsoring nonprofit events can use the system. The system also allows reservations to be created for Audio / Visual Equipment and Special Events Planning. 
+
+At present, there is not an easy way to view insights from data and processes within the system which could be used to make the reservation system more economically manageable and provide increased user satisfaction and usability.  The approach that will be used to fulfill this goal, is to create a distributed application implemented in MySQL, Python and Django, using Google Cloud Computing. 
 %%end of problem statement text
 
 \paragraph{Relationships and Data Structure}
