Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,9 @@
 \usepackage{parcolumns}
 \usepackage[normalem]{ulem}
 %%\usepackage{showframe} % For illustration
+\usepackage{tikz}
+\usepackage{graphicx}
+\usepackage{geometry}
 
 % Add reference functionality
 \makeatletter
@@ -85,7 +88,9 @@ Based on the system design requirements, the following entity types are in the R
 
 \section*{Assumption about the database (in English)}
 \subsection*{Relationships}
-
+\begin{center}
+\includegraphics{reservation_conceptual.PNG}
+\end{center}
 
 \subsection*{Attributes and Keys}
 
