--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,9 @@
 \documentclass[11pt]{report}
 \usepackage[margin=1in,footskip=0.25in]{geometry}
+\usepackage[utf8]{inputenc}
+\usepackage[english]{babel}
+\setlength{\parindent}{4em}
+\setlength{\parskip}{1em}
 \usepackage{sectsty}
 \usepackage{parcolumns}
 \usepackage[normalem]{ulem}
@@ -91,12 +95,21 @@ Based on the system design requirements, the following entity types are in the R
 \begin{center}
 \includegraphics{reservation_conceptual.PNG}
 \end{center}
+\pagebreak
 
-\subsection*{Attributes and Keys}
+\subsection*{Relationship - Reservation, Room, User}
+Relationship Example: A User creates a Reservation for Conference Room B5
 
-Specify the assumption about the database in English 
-(Chapter 3
-) 
+\setlength{\parindent}{5ex}
+ Using this example, there are  x relationship types
+ All are binary relationships (degree 2)
+ 
+ CREATES (between USER, RESERVATION)
+ 
+ CONTROLS (between RESERVATION, ROOM)
+ 
+ 
+
 Here you talk about attributes,
  keys, the nature of relationships between entities, etc. Do not 
 discuss something that is obvious (e.g.,
