Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -109,6 +109,9 @@ Relationship Set Example: A Reservation is created for a Room
 \includegraphics{resv_holds_room.PNG}
 \end{center}
  
+Relationship Set Example: A User Registers 
+
+ 
  
  
  
