Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -57,7 +57,7 @@
 \end{titlepage}
 
 \section*{Abstract}
-In this paper I present developing an application in Python, MySQL and Django running on Google App Engine. Django is an open-source framework that is designed on top of Python and supports data-driven architecture.  The intent is to take advantage of Django’s rapid development and security features to quickly implement the UB Reservation System. Google App Engine provides the power and flexibility of being able to write the application code, test it locally and upload it to Google Cloud. App Engine has an automatic scaling feature that will let the application scale to meet future requirements irrespective of the number of users or the amount of data that the application stores which ensures stability. 
+In this paper I present developing an application using Python, MySQL and Django running on Google App Engine. Django is an open-source framework that is designed on top of Python and supports data-driven architecture.  The intent is to take advantage of Django’s rapid development and security features to quickly implement the UB Reservation System. Google App Engine provides the power and flexibility of being able to write the application code, test it locally and upload it to Google Cloud. App Engine has an automatic scaling feature that will let the application scale to meet future requirements irrespective of the number of users or the amount of data that the application stores.  
 
 %%end of abstract text
 \section*{Problem Statement}
